--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,9 +1,10 @@
 .para,
-.small-para {
+.small-para
+ {
   color: hsl(0, 100%, 50%);
 }
 
-.small-para {
+.small-para.para {
   font-size: 12px;
 }
 
@@ -11,7 +12,7 @@
   font-size: 22px;
 }
 
-.confirm {
+.confirm.button {
   background: green;
   color: white;
   font-size: 20px;
@@ -24,12 +25,12 @@
   font-size: 20px;
 }
 
-.child {
+.child.text {
   color: red;
   font-size: 14px;
 }
 
-div.text {
+.text {
   color: green;
   font-size: 28px;
 }
