--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,9 +1,13 @@
 .header  {
+  display: flex;
   font-family: monospace;
   background: papayawhip;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
+  display: flex;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
@@ -14,6 +18,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display:flex;
+  padding: 8px;
+  align-items: center;
+  gap: 8px;
 }
 
 a {
