--- a/grid/03-grid-layout-3/solution/solution.css
+++ b/grid/03-grid-layout-3/solution/solution.css
@@ -34,7 +34,7 @@
 }
 
 .sidebar {
-  background-color: #FF7755;
+  background-color: #ff7755;
 }
 
 .sidebar .photo {
@@ -45,7 +45,7 @@
   border-radius: 10px;
 }
 
-.photo  {
+.photo {
 }
 
 .sidebar .side-content {
@@ -56,7 +56,7 @@
 }
 
 .nav {
-  background-color: #FF7755;
+  background-color: #ff7755;
 }
 
 .nav ul {
@@ -79,7 +79,7 @@
 }
 
 .article .card {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   color: black;
   text-align: center;
 }
@@ -101,7 +101,7 @@
 
 .footer p {
   font-size: 13px;
-  font-weight: normal;  
+  font-weight: normal;
 }
 
 /* SOLUTION */
@@ -121,10 +121,12 @@
 
 .logo {
   justify-self: start;
+  grid-column: 1;
 }
 
 .menu {
   align-self: center;
+  grid-column: 2;
 }
 
 .menu ul {
@@ -143,7 +145,7 @@
   gap: 50px;
 }
 
-.photo  {
+.photo {
   display: grid;
   align-items: center;
 }
